--- a/cle/template/cle/page_ajouter.html
+++ b/cle/template/cle/page_ajouter.html
@@ -28,11 +28,11 @@
 		
 		// On cree l'html de notre formulaire de caractere
 		// (avec un nom, un id, et un parametre pour la fonction de suppression qui correspond à l"ID)
-		var caractere = '<p> Caractere ' + i + ' : </p> 		Nom Caractere X \
-		<input type="text" name="caractereX">\
+		var caractere = '<p> Caractere ' + i + ' : </p> 		Nom Caractere \
+		<input type="text" name="caractere' + i + '">\
 		</br>\
-		Etat X\
-		<input type="text" name="etatX">\
+		Etat\
+		<input type="text" name="etat' + i + '">\
 			<button type="button" onclick="RmCurrentCaractereInput(\'id' + i + '\')" >Supprimer Caractere</button>'
 
 		// On met le code HTML ci-dessus dans notre balise <p>
@@ -68,9 +68,9 @@
 
 <h4><font size="+3">Ajouter une clé</font></h4>
 <hr>
-<p> Bienvenue M. ....</p>
 
 {% if request.user.is_authenticated%}
+<p> Bienvenue {{ request.user.username }}</p>
 	<form id="myForm" align="center" action="" method="post">
 		{% csrf_token %}
 		Nom Espece :<br>
@@ -96,5 +96,7 @@
 	<div id="out">
 		<a href="{% url 'logout' %}"><img src="static/images/logout.png" height="50" width="50"></a>
 	</div>
+{% else %}
+<p> Veuillez vous connecter en cliquant sur "Ajouter une clé"</p>
 {% endif%}
 {% endblock%}
