[ADD] Esp + Caractere -> database

--- a/cle/template/cle/page_ajouter.html
+++ b/cle/template/cle/page_ajouter.html
@@ -74,13 +74,13 @@
 	<form id="myForm" align="center" action="" method="post">
 		{% csrf_token %}
 		Nom Espece :<br>
-		<input type="text" name="Nomdefamille">
+		<input type="text" name="espName">
 		<br>
 		Nom Latin :<br>
-		<input type="text" name="Prenom">
+		<input type="text" name="latinName">
 		<br>
 		Description :<br>
-		<textarea name="textarea"
+		<textarea name="description"
 		rows="10" cols="30" placeholder="Description de l'espece."></textarea> 
 		
 
